--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_feed">Feed</string>
     <string name="title_add_friend">Add Friend</string>
     <string name="title_menu">Menu</string>
+    <string name="log_out">Log Out</string>
 </resources>
