tweaked add page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="send">Send</string>
     <string name="log_out">Log Out</string>
     <string name="share">Share your cutie here</string>
-    <string name="upload">Upload Image</string>
+    <string name="upload">Upload</string>
     <string name="create_post">Create Post</string>
+    <string name="choose_image">Choose Image</string>
 </resources>
