--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">CutieHacksProject2020</string>
     <string name="server_client_id">510879454537-ctj97pcv4sp98ve5vkeiv5asjng9da7b.apps.googleusercontent.com</string>
-    <string name="app">Find a Cutie</string>
+    <string name="app">Rate my Pet</string>
     <string name="title_home">Home</string>
     <string name="title_feed">Feed</string>
     <string name="title_add_friend">Add Friend</string>
