--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="upload">Upload</string>
     <string name="create_post">Create Post</string>
     <string name="choose_image">Choose Image</string>
+    <string name="cancel">Cancel Claim</string>
 </resources>
