--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="cancel">Cancel Claim</string>
     <string name="loading">Loading...</string>
     <string name="people_who_want_this">People who want this:</string>
+    <string name="draw_winner">Draw Winner</string>
+    <string name="be_the_first_to_claim_this_item">Be the first to claim this item</string>
+    <string name="i_want_this">I want this</string>
+    <string name="no_claimers_yet_msg">No claimers yet</string>
 </resources>
