--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="be_the_first_to_claim_this_item">Be the first to claim this item</string>
     <string name="i_want_this">I want this</string>
     <string name="no_claimers_yet_msg">No claimers yet</string>
+    <string name="write_a_description">Write a description</string>
 </resources>
